Test supported version (#53)
* ThirdParty: properties normalized

* using fuse dependencies for HL7, ThirdParty and EDI

* trying to deploy ThirdParty

* adding prometheus metric and sftp route to third party

* Updates:

- Updated iDaaS Connect EDI project to add a new routebuilder for POC. Also, apparently pu a space or new line into SftpRoutebuilderbut no onther core code changed.
- Tweaked EDI's application.properties to align with updated standards
- Tweaked EDI's CamelConfiguration.java to Remove the @component tag

* third party: moving messages after consumption

* placing the same configuration for HL7

* HL7: adding metrics and fixing Region error

* fixing error handling and adding filter

* removing application.properties

* adding application.properties to git ignore

* improving logs

* Updates:

- Endhanced EdiRouteBuilder.java to add common 5010 EDi healthcare transactions ONLY enabled from an HTTP REST perspective.
- Enhanced application-dev.properties to align to rework done

* third-party: adding db2 route

* third-party: creating different error metrics for DB2 and REST

* Updates:

- Updated iDaaS-Connect-BlueButton to align to industry centric perspective. Renamed to iDaaS-Connect-CMS-BlueButton

* Updates:

- Created iDaaS-Connect-CMS-Interoperability to address some common concerns and frustrations encountered. It will also ensure we have a specific location for ANY industry CMS Interoperability specific assets.

* Updates:

- Enhanced README.md in iDaaS-Connect to be better formatted.

* Updates:

- Enhanced application-dev.properties and CmsInteroperabilityRouteBuilder.java to support industry centric use cases

* Updates:

- Enhanced application-dev.properties and CmsInteroperabilityRouteBuilder.java to support industry centric use cases specific
to Davinci

* third-party: adding a second route for DQAAS

* third-party: adding prior authorization route

* HL7: sending file to ka

--- a/iDaaS-Connect-CMS-Interoperability/pom.xml
+++ b/iDaaS-Connect-CMS-Interoperability/pom.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>blue-button</artifactId>
+
+    <artifactId>edi</artifactId>
     <parent>
       <groupId>io.connectedhealth_idaas</groupId>
       <artifactId>idaas-connect</artifactId>
@@ -21,7 +22,7 @@
             <artifactId>spring-boot-autoconfigure</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.apache.camel.springboot</groupId>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-spring-boot-starter</artifactId>
         </dependency>
         <dependency>
@@ -40,7 +41,7 @@
         <!-- HTTP -->
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-http</artifactId>
+            <artifactId>camel-netty</artifactId>
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
@@ -51,45 +52,20 @@
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-kafka</artifactId>
         </dependency>
-        <!-- Bean -->
+        <!-- Http -->
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-bean</artifactId>
+            <artifactId>camel-http</artifactId>
         </dependency>
-        <!-- PDF -->
+        <!-- Parsers -->
         <dependency>
             <groupId>org.apache.camel</groupId>
-            <artifactId>camel-pdf</artifactId>
+            <artifactId>camel-bindy</artifactId>
+            <version>3.16.0</version>
         </dependency>
-        <!-- CSV -->
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-bindy-starter</artifactId>
-        </dependency>
-        <!-- XML Parsing -->
         <dependency>
             <groupId>org.apache.camel</groupId>
             <artifactId>camel-jackson</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>jakarta.xml.bind</groupId>
-            <artifactId>jakarta.xml.bind-api</artifactId>
-        </dependency>
-        <!--https://stackoverflow.com/questions/48722138/how-to-monitor-apache-camel-routes-in-a-java-project-using-hawtio-->
-        <!-- UI -->
-        <dependency>
-            <groupId>io.hawt</groupId>
-            <artifactId>hawtio-springboot</artifactId>
-        </dependency>
-        <!-- https://mvnrepository.com/artifact/org.jolokia/jolokia-jvm -->
-        <dependency>
-            <groupId>org.jolokia</groupId>
-            <artifactId>jolokia-jvm</artifactId>
-        </dependency>
-        <!-- This dependency is mandatory for enabling Camel management via JMX / Hawtio. -->
-        <dependency>
-            <groupId>org.apache.camel</groupId>
-            <artifactId>camel-management</artifactId>
         </dependency>
     </dependencies>
 
@@ -106,8 +82,15 @@
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
             <plugin>
-                <groupId>org.springframework.boot</groupId>
+                <groupId>org.jboss.redhat-fuse</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+        				<executions>
+        					<execution>
+        						<goals>
+        							<goal>repackage</goal>
+        						</goals>
+        					</execution>
+        				</executions>
             </plugin>
         </plugins>
     </build>
