--- a/iDaaS-Connect-EDI/src/main/resources/application-dev.properties
+++ b/iDaaS-Connect-EDI/src/main/resources/application-dev.properties
@@ -6,18 +6,25 @@ management.endpoint.jolokia.enabled=true
 # urls
 # http://localhost:9984/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
 # http://localhost:9984/actuator/hawtio/index.html
-# Used for internal HTTP server managing application
-# Must be unique and defined otherwise defaults to 8080
-# used for any Fuse SpringBoot developed assets
-# Server - Internal
-# Port Used
 management.port=9984
 server.port=9984
 # Management App Server Address
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
-idaas.kafkaBrokers=localhost:9092
+# Inbound Topics
+idaas.edi270.topic.name=270
+idaas.edi276.topic.name=276
+idaas.edi278.topic.name=278
+idaas.edi834.topic.name=834
+idaas.edi835.topic.name=835
+idaas.edi837.topic.name=837
+# Outbound Topics
+idaas.edi271.topic.name=271
+idaas.edi277.topic.name=277
+idaas.edi275.topic.name=275
+
+idaas.kafka.Brokers=localhost:9092
 idaas.integrationTopic=opsmgmt_platformtransactions
 idaas.terminologyTopic=idaas_terminologies
 idaas.processTerminologies=true
@@ -25,25 +32,6 @@ idaas.processTerminologies=true
 idaas.cloudTopic=idaas_cloud
 idaas.processPublicCloud=false
 idaas.cloudAPI=urlendpoint
-
-# Reporting Directory and File Name
-270.inputdirectory=/data-input/edi/270
-271.inputdirectory=/data-input/edi/271
-276.inputdirectory=/data-input/edi/276
-277.inputdirectory=/data-input/edi/277
-834.inputdirectory=/data-input/edi/834
-835.inputdirectory=/data-input/edi/835
-837.inputdirectory=/data-input/edi/837
-inputDir.extension=*.edi
-
-# Topics
-idaas.topicName270_Output=edi_270
-idaas.topicName271_Output=edi_271
-idaas.topicName276_Output=edi_276
-idaas.topicName277_Output=edi_277
-idaas.topicName834_Output=edi_834
-idaas.topicName835_Output=edi_835
-idaas.topicName837_Output=edi_837
 
 # General Settings
 idaas.public_cloud=false
