--- a/iDaaS-Connect-HL7/src/main/resources/application_old.properties
+++ b/iDaaS-Connect-HL7/src/main/resources/application_old.properties
@@ -1,8 +1,7 @@
 # Admin Interface Settings
 management.endpoints.web.exposure.include=hawtio, jolokia,info, health, prometheus
-hawtio.authenticationEnabled=false
-management.endpoint.hawtio.enabled=true
-management.endpoint.jolokia.enabled=true
+management.endpoint.prometheus.enabled=true
+
 # urls
 # http://localhost:9980/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
 # http://localhost:9980/actuator/hawtio/index.html
