--- a/iDaaS-Connect-ThirdParty/pom.xml
+++ b/iDaaS-Connect-ThirdParty/pom.xml
@@ -76,6 +76,10 @@
         </dependency>
         <dependency>
             <groupId>org.apache.camel</groupId>
+            <artifactId>camel-aws</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.camel</groupId>
             <artifactId>camel-micrometer</artifactId>
         </dependency>
         <dependency>
