--- a/fhir/src/main/resources/application-dev.properties
+++ b/fhir/src/main/resources/application-dev.properties
@@ -25,18 +25,18 @@ idaas.terminologyTopic=idaas_terminologies
 idaas.cloudTopic=idaas_cloud
 idaas.processPublicCloud=false
 idaas.cloudAPI=urlendpoint
-# fhirVendor can be ibm hapi or microsoft
-idaas.fhirVendor=hapi
-idaas.ibmURI=localhost:8090/fhir-server/api/v4/
+# FHIR Specific
 # HAPI FHIR prior to 5.x server release
 #idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
 # HAPI FHIR Server post 5.x
 #idaas.hapiURI=localhost:8888/fhir/
-idaas.hapiURI=http://localhost:9981/idaas/
-idaas.msoftURI=localhost:0809/microsoftapi/api/v4/
-# FHIR Specific
+idaas.fhirServerURI=localhost:8888/fhir/
 idaas.processToFHIR=true
-idaas.processTerminologies=true
 idaas.processBundles=false
-# General Settings
-idaas.public_cloud=false
+# Processes
+idaas.process.PublicCloud=true
+idaas.process.Terminologies=true
+idaas.process.Sdoh=true
+idaas.process.Deidentification=false
+idaas.process.Empi=false
+idaas.process.Acks=true
