--- a/fhir/src/main/resources/application-dev.properties
+++ b/fhir/src/main/resources/application-dev.properties
@@ -19,12 +19,26 @@ management.address=0.0.0.0
 # idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
 # Physical/Virtual
 idaas.kafkaBrokers=localhost:9092
-idaas.integrationTopic=opsmgmt_platformtransactions
-idaas.terminologyTopic=idaas_terminologies
-# Public Cloud
-idaas.cloudTopic=idaas_cloud
-idaas.processPublicCloud=false
-idaas.cloudAPI=urlendpoint
+idaas.ccdaconversion.topic.name=ccdaconverted
+idaas.hl7conversion.topic.name=hl7converted
+idaas.publiccloud.topic.name=cloud
+idaas.terminology.topic.name=terminologies
+idaas.deidentification.topic.name=deidentification
+idaas.datatier.topic.name=datatier
+idass.heda.topic.name=hedainbound
+idass.sdoh.topic.name=sdoh
+# Processes
+idaas.process.PublicCloud=true
+idaas.process.Terminologies=true
+idaas.process.Sdoh=true
+idaas.process.Deidentification=false
+idaas.process.Empi=false
+idaas.process.DataTier=false
+idass.process.HEDA=false
+# External APIs
+idaas.api.deidentification=http://localhost:8001/api/deidentification
+idaas.api.empi=http://localhost:8001/api/empi
+idaas.api.cloud=urlendpoint
 # FHIR Specific
 # HAPI FHIR prior to 5.x server release
 #idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
@@ -33,10 +47,4 @@ idaas.cloudAPI=urlendpoint
 idaas.fhirServerURI=localhost:8888/fhir/
 idaas.processToFHIR=true
 idaas.processBundles=false
-# Processes
-idaas.process.PublicCloud=true
-idaas.process.Terminologies=true
-idaas.process.Sdoh=true
-idaas.process.Deidentification=false
-idaas.process.Empi=false
-idaas.process.Acks=true
+
