--- a/cms-interoperability/src/main/resources/application-dev.properties
+++ b/cms-interoperability/src/main/resources/application-dev.properties
@@ -17,7 +17,7 @@ server.port=9984
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
-# Inbound Topics
+idaas.kafka.Brokers=localhost:9092
 idaas.xds.topic.name=xdsb_inbd
 idaas.pixaddupdate.topic.name=pixaddupdate_inbd
 idaas.providerreqdocs.topic.name=providerreqdocs_inbd
@@ -25,17 +25,26 @@ idaas.priorauth.topic.name=priorauth_inbd
 idaas.deqm.topic.name=deqm_inbd
 idaas.pdex.topic.name=pdex_inbd
 idaas.epdx.topic.name=epdx_inbd
-idaas.kafka.Brokers=localhost:9092
-idaas.integrationTopic=opsmgmt_platformtransactions
-idaas.terminologyTopic=idaas_terminologies
-idaas.processTerminologies=true
-# Public Cloud
-idaas.cloudTopic=idaas_cloud
-idaas.processPublicCloud=false
-idaas.cloudAPI=urlendpoint
-
-# General Settings
-idaas.public_cloud=false
+idaas.publiccloud.topic.name=cloud
+idaas.terminology.topic.name=terminologies
+idaas.deidentification.topic.name=deidentification
+idaas.processacks.topic.name=hl7acks
+idaas.datatier.topic.name=datatier
+idass.heda.topic.name=hedainbound
+idass.sdoh.topic.name=sdoh
+# Processes
+idaas.process.PublicCloud=true
+idaas.process.Terminologies=true
+idaas.process.Sdoh=true
+idaas.process.Deidentification=false
+idaas.process.Empi=false
+idaas.process.Acks=true
+idaas.process.DataTier=false
+idass.process.HEDA=false
+# External APIs
+idaas.api.deidentification=http://localhost:8001/api/deidentification
+idaas.api.empi=http://localhost:8001/api/empi
+idaas.api.cloud=urlendpoint
 # JDBC Database
 #spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
 #spring.datasource.username=idaas
