--- a/edi/src/main/resources/application-dev.properties
+++ b/edi/src/main/resources/application-dev.properties
@@ -12,29 +12,36 @@ server.port=9984
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
-# Inbound Topics
+idaas.kafkaBrokers=localhost:9092
+idaas.ccdaconversion.topic.name=ccdaconverted
+idaas.hl7conversion.topic.name=hl7converted
+idaas.publiccloud.topic.name=cloud
+idaas.terminology.topic.name=terminologies
+idaas.deidentification.topic.name=deidentification
+idaas.datatier.topic.name=datatier
+idass.heda.topic.name=hedainbound
+idass.sdoh.topic.name=sdoh
 idaas.edi270.topic.name=270
 idaas.edi276.topic.name=276
 idaas.edi278.topic.name=278
 idaas.edi834.topic.name=834
 idaas.edi835.topic.name=835
 idaas.edi837.topic.name=837
-# Outbound Topics
 idaas.edi271.topic.name=271
 idaas.edi277.topic.name=277
 idaas.edi275.topic.name=275
-
-idaas.kafka.Brokers=localhost:9092
-idaas.integrationTopic=opsmgmt_platformtransactions
-idaas.terminologyTopic=idaas_terminologies
-idaas.processTerminologies=true
-# Public Cloud
-idaas.cloudTopic=idaas_cloud
-idaas.processPublicCloud=false
-idaas.cloudAPI=urlendpoint
-
-# General Settings
-idaas.public_cloud=false
+# Processes
+idaas.process.PublicCloud=true
+idaas.process.Terminologies=true
+idaas.process.Sdoh=true
+idaas.process.Deidentification=false
+idaas.process.Empi=false
+idaas.process.DataTier=false
+idass.process.HEDA=false
+# External APIs
+idaas.api.deidentification=http://localhost:8001/api/deidentification
+idaas.api.empi=http://localhost:8001/api/empi
+idaas.api.cloud=urlendpoint
 # JDBC Database
 #spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
 #spring.datasource.username=idaas
