--- a/hl7/src/main/resources/application-dev.properties
+++ b/hl7/src/main/resources/application-dev.properties
@@ -9,17 +9,34 @@ server.port=8080
 server.max-http-header-size=200000
 # Kafka Details and Topics
 idaas.kafka.brokers=localhost:9092
-idaas.ccdapost.topic.name=ccda
+idaas.ccdapost.topic.name=ccdapost
 idaas.ccdaconversion.topic.name=ccdaconverted
 idaas.hl7conversion.topic.name=hl7converted
-idaas.hl7post.topic.name=hl7converted
+idaas.hl7post.topic.name=hl7post
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
 idaas.processacks.topic.name=hl7acks
+idaas.datatier.topic.name=datatier
+idass.heda.topic.name=hedainbound
+idass.sdoh.topic.name=sdoh
 idaas.hl7adt.topic.name=adt
+idaas.hl7mdm.topic.name=mdm
+idaas.hl7mfn.topic.name=mfn
+idaas.hl7orm.topic.name=orm
+idaas.hl7oru.topic.name=oru
+idaas.hl7rde.topic.name=rde
+idaas.hl7sch.topic.name=sch
+idaas.hl7vxu.topic.name=vxu
 # HL7 Ports
 idaas.port.adt=10001
+idaas.port.mdm=10002
+idaas.port.mfn=10003
+idaas.port.orm=10004
+idaas.port.oru=10005
+idaas.port.rde=10006
+idaas.port.sch=10007
+idaas.port.vxu=10008
 # Processes
 idaas.process.PublicCloud=true
 idaas.process.Terminologies=true
@@ -27,13 +44,15 @@ idaas.process.Sdoh=true
 idaas.process.Deidentification=false
 idaas.process.Empi=false
 idaas.process.Acks=true
-#idaas.convert.anonymize=false
+idaas.process.DataTier=false
+idass.process.HEDA=false
 # Conversions
 idaas.convert.CCDAtoFHIR=true
 idaas.convert.HL7toFHIR=true
 # External APIs
 idaas.api.deidentification=http://localhost:8001/api/deidentification
 idaas.api.empi=http://localhost:8001/api/empi
+idaas.api.cloud=urlendpoint
 # Other Settings
 aws.access.key=
 aws.secret.key=
