--- a/hl7/docker/Dockerfile.jvm
+++ b/hl7/docker/Dockerfile.jvm
@@ -1,3 +1,3 @@
-FROM openshift/fuse7-java11-openshift:1.10
+FROM registry.redhat.io/fuse7/fuse-java-openshift-jdk11-rhel8:1.10
 
 COPY target/*.jar /deployments/app.jar
