--- a/hl7/docker/Dockerfile.jvm
+++ b/hl7/docker/Dockerfile.jvm
@@ -1,3 +1,3 @@
-FROM registry.redhat.io/fuse7/fuse-java-openshift-jdk11-rhel8:1.10
+FROM image-registry.openshift-image-registry.svc:5000/openshift/fuse7-java-openshift:1.10
 
 COPY target/*.jar /deployments/app.jar
