--- a/cms-interoperability/src/main/resources/application-dev.properties
+++ b/cms-interoperability/src/main/resources/application-dev.properties
@@ -30,8 +30,8 @@ idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
 idaas.processacks.topic.name=hl7acks
 idaas.datatier.topic.name=datatier
-idass.heda.topic.name=hedainbound
-idass.sdoh.topic.name=sdoh
+idaas.heda.topic.name=hedainbound
+idaas.sdoh.topic.name=sdoh
 # Processes
 idaas.process.PublicCloud=true
 idaas.process.Terminologies=true
@@ -40,7 +40,7 @@ idaas.process.Deidentification=false
 idaas.process.Empi=false
 idaas.process.Acks=true
 idaas.process.DataTier=false
-idass.process.HEDA=false
+idaas.process.HEDA=false
 # External APIs
 idaas.api.deidentification=http://localhost:8001/api/deidentification
 idaas.api.empi=http://localhost:8001/api/empi
