--- a/edi/src/main/resources/application-dev.properties
+++ b/edi/src/main/resources/application-dev.properties
@@ -19,8 +19,8 @@ idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
 idaas.datatier.topic.name=datatier
-idass.heda.topic.name=hedainbound
-idass.sdoh.topic.name=sdoh
+idaas.heda.topic.name=hedainbound
+idaas.sdoh.topic.name=sdoh
 idaas.edi270.topic.name=270
 idaas.edi276.topic.name=276
 idaas.edi278.topic.name=278
@@ -37,7 +37,7 @@ idaas.process.Sdoh=true
 idaas.process.Deidentification=false
 idaas.process.Empi=false
 idaas.process.DataTier=false
-idass.process.HEDA=false
+idaas.process.HEDA=false
 # External APIs
 idaas.api.deidentification=http://localhost:8001/api/deidentification
 idaas.api.empi=http://localhost:8001/api/empi
