--- a/fhir/src/main/resources/application-dev.properties
+++ b/fhir/src/main/resources/application-dev.properties
@@ -25,8 +25,8 @@ idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
 idaas.datatier.topic.name=datatier
-idass.heda.topic.name=hedainbound
-idass.sdoh.topic.name=sdoh
+idaas.heda.topic.name=hedainbound
+idaas.sdoh.topic.name=sdoh
 # Processes
 idaas.process.PublicCloud=true
 idaas.process.Terminologies=true
@@ -34,7 +34,7 @@ idaas.process.Sdoh=true
 idaas.process.Deidentification=false
 idaas.process.Empi=false
 idaas.process.DataTier=false
-idass.process.HEDA=false
+idaas.process.HEDA=false
 # External APIs
 idaas.api.deidentification=http://localhost:8001/api/deidentification
 idaas.api.empi=http://localhost:8001/api/empi
