--- a/fhir/src/main/resources/application-dev.properties
+++ b/fhir/src/main/resources/application-dev.properties
@@ -19,8 +19,7 @@ management.address=0.0.0.0
 # idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
 # Physical/Virtual
 idaas.kafkaBrokers=localhost:9092
-idaas.ccdaconversion.topic.name=ccdaconverted
-idaas.hl7conversion.topic.name=hl7converted
+idaas.fhir.topic.name=fhir
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
