--- a/hl7/src/main/resources/application-dev.properties
+++ b/hl7/src/main/resources/application-dev.properties
@@ -10,9 +10,9 @@ server.max-http-header-size=200000
 # Kafka Details and Topics
 idaas.kafka.brokers=localhost:9092
 idaas.ccdapost.topic.name=ccdapost
-idaas.ccdaconversion.topic.name=ccdaconverted
-idaas.hl7conversion.topic.name=hl7converted
 idaas.hl7post.topic.name=hl7post
+idaas.hl7conversion.topic.name=fhir
+idaas.ccdaconversion.topic.name=fhir
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
@@ -41,10 +41,10 @@ idaas.port.vxu=10008
 idaas.process.PublicCloud=true
 idaas.process.Terminologies=true
 idaas.process.Sdoh=true
-idaas.process.Deidentification=false
-idaas.process.Empi=false
+idaas.process.Deidentification=true
+idaas.process.Empi=true
 idaas.process.Acks=true
-idaas.process.DataTier=false
+idaas.process.DataTier=true
 idaas.process.HEDA=false
 # Conversions
 idaas.convert.CCDAtoFHIR=true
