--- a/hl7/src/main/resources/application-dev.properties
+++ b/hl7/src/main/resources/application-dev.properties
@@ -3,16 +3,16 @@ management.endpoints.web.exposure.include=hawtio, jolokia,info, health, promethe
 management.endpoint.prometheus.enabled=true
 # Management App Server Address
 server.address=0.0.0.0
-management.port=8080
+management.port=9980
 management.address=0.0.0.0
-server.port=8080
+server.port=9980
 server.max-http-header-size=200000
 # Kafka Details and Topics
 idaas.kafka.brokers=localhost:9092
 idaas.ccdapost.topic.name=ccdapost
 idaas.hl7post.topic.name=hl7post
 idaas.hl7conversion.topic.name=fhir
-idaas.ccdaconversion.topic.name=fhir
+idaas.ccdaconversion.topic.name=fhirbundle
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
