--- a/edi/src/main/resources/application-dev.properties
+++ b/edi/src/main/resources/application-dev.properties
@@ -12,7 +12,7 @@ server.port=9984
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
-idaas.kafkaBrokers=localhost:9092
+idaas.kafka.Brokers=localhost:9092
 idaas.ccdaconversion.topic.name=ccdaconverted
 idaas.hl7conversion.topic.name=hl7converted
 idaas.publiccloud.topic.name=cloud
