--- a/ncpdp/src/main/resources/application-dev.properties
+++ b/ncpdp/src/main/resources/application-dev.properties
@@ -6,13 +6,13 @@ management.endpoint.jolokia.enabled=true
 # urls
 # http://localhost:9984/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
 # http://localhost:9984/actuator/hawtio/index.html
-management.port=9984
-server.port=9984
+management.port=9987
+server.port=9987
 # Management App Server Address
 server.address=0.0.0.0
 management.address=0.0.0.0
 # Kafka
-idaas.kafkaBrokers=localhost:9092
+idaas.kafka.Brokers=localhost:9092
 idaas.ccdaconversion.topic.name=ccdaconverted
 idaas.hl7conversion.topic.name=hl7converted
 idaas.publiccloud.topic.name=cloud
