--- a/fhir/src/main/resources/application-dev.properties
+++ b/fhir/src/main/resources/application-dev.properties
@@ -18,7 +18,7 @@ management.address=0.0.0.0
 # OpenShift Example
 # idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
 # Physical/Virtual
-idaas.kafkaBrokers=localhost:9092
+idaas.kafka.Brokers=localhost:9092
 idaas.fhir.topic.name=fhir
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
