--- a/sap/src/main/resources/application-dev.properties
+++ b/sap/src/main/resources/application-dev.properties
@@ -15,6 +15,8 @@ server.port=9986
 # Management App Server Address
 server.address=0.0.0.0
 management.address=0.0.0.0
+# Kafka
+idaas.kafka.Brokers=localhost:9092
 idaas.iot.integration.topic=iot
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
