--- a/cloud/src/main/resources/application-dev.properties
+++ b/cloud/src/main/resources/application-dev.properties
@@ -18,19 +18,36 @@ management.address=0.0.0.0
 # Kafka
 # OpenShift Example
 # idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
-idaas.kafkaBrokers=localhost:9092
-idaas.integrationTopic=opsmgmt_platformtransactions
-idaas.cloudTopic=idaas_cloud
-idaas.test_cloudTopic=idaas_cloud
-## AWS
-# Access
-idaas.awsAccessKey=<Your Key Here>
-idaas.awsSecretKey=<Your Key Here>
-#AWS-S3
+idaas.kafka.Brokers=localhost:9092
+idaas.awss3.topic.name=awss3
+idaas.awsmqqueue.topic.name=awsmqqueue
+idaas.awsmqtopic.topic.name=awsmqtopic
+idaas.awssqs.topic.name=awsmqtopic
+## AWS Settings
+idaas.aws.S3=true
+idaas.aws.MQ.Queue=true
+idaas.aws.MQ.Topic=true
+idaas.aws.SQS=true
+idaas.aws.Kinesis=true
+idaas.aws.SNS=true
+idaas.aws.SES=true
+idaas.aws.Lambda=false
+# AWS MQ
+idaas.aws.mq.queue=myHealthcareQueue?connectionFactory=#jmsConnectionFactory
+idaas.aws.mq.topic=myHealthcareTopic?connectionFactory=#jmsConnectionFactory
+# AWS SQS
+idaas.aws.sqs=testhealthcare
+# AWS Access
+idaas.aws.access.key=<Your Key Here>
+idaas.aws.secret.key=<Your Key Here>
+# Azure
+# GCP
+# AWS-S3
 camel.component.aws2-s3.accessKey=<Your Key Here>
 camel.component.aws2-s3.secretKey=<Your Key Here>
 camel.component.aws2-s3.region=us-east-1
-bucketName=testhealthcarebucket
+idaas.aws.bucketName=testhealthcarebucket
+# AWS Keys
 camel.component.aws2-sqs.accessKey=<Your Key Here>
 camel.component.aws2-sqs.secretKey=<Your Key Here>
 camel.component.aws2-sqs.region=us-east-1
@@ -53,13 +70,4 @@ broker.password=<Your Password Here>
 broker.url=amqps://${broker.address}:${broker.port}?${broker.options}
 sleep.time=1
 amq.url=amq:test.
-#AWSConnectorSettings
-idaas.awsS3=true
-idaas.awsMQ=true
-idaas.awsSQS=true
-idaas.awsKinesis=true
-idaas.awsSNS=true
-idaas.awsSES=true
-idaas.awsLambda-false
-#Azure
-#GCP
+
