Defects/idaas connect v4 (#60)
* Updates

- Resolved naming application-dev.properties in all the submodules and corrected various misspellings of idaas.
- Removed old files from hl7 and sap modules
- Enhanced and corrected code in Hl7RouteBuilder.java
- Added jkube directory and deployment.yaml to cms-blue-button
- Changed name of CamelConfiguration.java in sap submodule to SapRouteBuilder.java

* Updates:

- jkube into cloud submodule

* Updates:

- Added eprescribe submodule with relavant /src /resources and assets.

* Updates:

- Enhanced application-dev.properties for fhir and hl7 based on some advanced data flows and testing
- Enhanced Routes for fhir and hl7 based on same advanced data flows and testing.

* Updates:

- Resolved processing issues in hl7.
- Added HL7 MLLP ports for MDM, MFN, ORM, ORU, RDE, SCH and VXU

* Updates:

- Resolved processing issues in cms-interoperability, cloud,edi,fhir,thirdparty
- Changed eprescribe submodule name to ncdp

* Updates:

- Updates to fix logging to more JSON based formatting. Added references to POM.xml and logback.xml into resources directories for cms-interoperability, edi, fhir, and ncpdp

* Updates:

- Updates to cloud

Co-authored-by: Alan Scott <balanscott@outlook.com>

--- a/cms-interoperability/src/main/resources/application-dev.properties
+++ b/cms-interoperability/src/main/resources/application-dev.properties
@@ -11,8 +11,8 @@ management.endpoint.jolokia.enabled=true
 # used for any Fuse SpringBoot developed assets
 # Server - Internal
 # Port Used
-management.port=9984
-server.port=9984
+management.port=9988
+server.port=9988
 # Management App Server Address
 server.address=0.0.0.0
 management.address=0.0.0.0
@@ -30,8 +30,8 @@ idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
 idaas.processacks.topic.name=hl7acks
 idaas.datatier.topic.name=datatier
-idass.heda.topic.name=hedainbound
-idass.sdoh.topic.name=sdoh
+idaas.heda.topic.name=hedainbound
+idaas.sdoh.topic.name=sdoh
 # Processes
 idaas.process.PublicCloud=true
 idaas.process.Terminologies=true
@@ -40,7 +40,7 @@ idaas.process.Deidentification=false
 idaas.process.Empi=false
 idaas.process.Acks=true
 idaas.process.DataTier=false
-idass.process.HEDA=false
+idaas.process.HEDA=false
 # External APIs
 idaas.api.deidentification=http://localhost:8001/api/deidentification
 idaas.api.empi=http://localhost:8001/api/empi
