--- a/hl7/src/main/resources/application-dev.properties
+++ b/hl7/src/main/resources/application-dev.properties
@@ -3,23 +3,23 @@ management.endpoints.web.exposure.include=hawtio, jolokia,info, health, promethe
 management.endpoint.prometheus.enabled=true
 # Management App Server Address
 server.address=0.0.0.0
-management.port=8081
+management.port=9980
 management.address=0.0.0.0
-server.port=8080
+server.port=9980
 server.max-http-header-size=200000
 # Kafka Details and Topics
 idaas.kafka.brokers=localhost:9092
 idaas.ccdapost.topic.name=ccdapost
-idaas.ccdaconversion.topic.name=ccdaconverted
-idaas.hl7conversion.topic.name=hl7converted
 idaas.hl7post.topic.name=hl7post
+idaas.hl7conversion.topic.name=fhir
+idaas.ccdaconversion.topic.name=fhirbundle
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
 idaas.processacks.topic.name=hl7acks
 idaas.datatier.topic.name=datatier
-idass.heda.topic.name=hedainbound
-idass.sdoh.topic.name=sdoh
+idaas.heda.topic.name=hedainbound
+idaas.sdoh.topic.name=sdoh
 idaas.hl7adt.topic.name=adt
 idaas.hl7mdm.topic.name=mdm
 idaas.hl7mfn.topic.name=mfn
@@ -41,11 +41,11 @@ idaas.port.vxu=10008
 idaas.process.PublicCloud=true
 idaas.process.Terminologies=true
 idaas.process.Sdoh=true
-idaas.process.Deidentification=false
-idaas.process.Empi=false
+idaas.process.Deidentification=true
+idaas.process.Empi=true
 idaas.process.Acks=true
-idaas.process.DataTier=false
-idass.process.HEDA=false
+idaas.process.DataTier=true
+idaas.process.HEDA=false
 # Conversions
 idaas.convert.CCDAtoFHIR=true
 idaas.convert.HL7toFHIR=true
