--- a/ncpdp/src/main/resources/application-dev.properties
+++ b/ncpdp/src/main/resources/application-dev.properties
@@ -1,31 +1,27 @@
-## Admin Interface Settings
-management.endpoints.web.exposure.include=hawtio, jolokia
+# Admin Interface Settings
+management.endpoints.web.exposure.include=hawtio, jolokia,info, health, prometheus
 hawtio.authenticationEnabled=false
 management.endpoint.hawtio.enabled=true
 management.endpoint.jolokia.enabled=true
 # urls
-# http://localhost:9981/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
-# http://localhost:9981/actuator/hawtio/index.html
-#
-# Port Used
-management.port=9981
-server.port=9981
-server.max-http-header-size=200000
-## Management App Server Address
+# http://localhost:9984/actuator/jolokia/read/org.apache.camel:context=*,type=routes,name=*
+# http://localhost:9984/actuator/hawtio/index.html
+management.port=9987
+server.port=9987
+# Management App Server Address
 server.address=0.0.0.0
 management.address=0.0.0.0
-## Kafka
-# OpenShift Example
-# idaas.kafkaBrokers=cdp-kafka-cluster-kafka-bootstrap.kafka-for-cdp:9092
-# Physical/Virtual
+# Kafka
 idaas.kafka.Brokers=localhost:9092
-idaas.fhir.topic.name=fhir
+idaas.ccdaconversion.topic.name=ccdaconverted
+idaas.hl7conversion.topic.name=hl7converted
 idaas.publiccloud.topic.name=cloud
 idaas.terminology.topic.name=terminologies
 idaas.deidentification.topic.name=deidentification
 idaas.datatier.topic.name=datatier
 idaas.heda.topic.name=hedainbound
 idaas.sdoh.topic.name=sdoh
+idaas.rxfill.topic.name=rxfill
 # Processes
 idaas.process.PublicCloud=true
 idaas.process.Terminologies=true
@@ -38,12 +34,7 @@ idaas.process.HEDA=false
 idaas.api.deidentification=http://localhost:8001/api/deidentification
 idaas.api.empi=http://localhost:8001/api/empi
 idaas.api.cloud=urlendpoint
-# FHIR Specific
-# HAPI FHIR prior to 5.x server release
-#idaas.hapiURI=localhost:8888/hapi-fhir-jpaserver/fhir/
-# HAPI FHIR Server post 5.x
-#idaas.hapiURI=localhost:8888/fhir/
-idaas.fhirServerURI=localhost:8888/fhir/
-idaas.processToFHIR=true
-idaas.processBundles=false
-
+# JDBC Database
+#spring.datasource.url=jdbc:mysql://localhost/idaas?useLegacyDatetimeCode=false&serverTimezone=America/Chicago
+#spring.datasource.username=idaas
+#spring.datasource.password=@idaas123
