--- a/hl7/pom.xml
+++ b/hl7/pom.xml
@@ -146,7 +146,15 @@
             <groupId>ch.qos.logback.contrib</groupId>
             <artifactId>logback-json-classic</artifactId>
         </dependency>
-
+        <!-- Mgmt UI -->
+        <dependency>
+            <groupId>io.hawt</groupId>
+            <artifactId>hawtio-springboot</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.jolokia</groupId>
+            <artifactId>jolokia-jvm</artifactId>
+        </dependency>
     </dependencies>
 
     <profiles>
