--- a/sap/pom.xml
+++ b/sap/pom.xml
@@ -76,6 +76,15 @@
       <groupId>io.connectedhealth-idaas</groupId>
       <artifactId>idaas-eventbuilder</artifactId>
     </dependency>
+    <!-- Logs -->
+    <dependency>
+      <groupId>ch.qos.logback.contrib</groupId>
+      <artifactId>logback-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback.contrib</groupId>
+      <artifactId>logback-json-classic</artifactId>
+    </dependency>
   </dependencies>
 
   <profiles>
