--- a/cloud/pom.xml
+++ b/cloud/pom.xml
@@ -108,6 +108,15 @@
       <groupId>io.connectedhealth-idaas</groupId>
       <artifactId>idaas-eventbuilder</artifactId>
     </dependency>
+    <!-- Logs -->
+    <dependency>
+      <groupId>ch.qos.logback.contrib</groupId>
+      <artifactId>logback-jackson</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback.contrib</groupId>
+      <artifactId>logback-json-classic</artifactId>
+    </dependency>
     <dependency>
       <groupId>com.amazonaws</groupId>
       <artifactId>aws-java-sdk</artifactId>
