--- a/fhir/src/main/resources/application-dev.properties
+++ b/fhir/src/main/resources/application-dev.properties
@@ -44,6 +44,6 @@ idaas.api.cloud=urlendpoint
 # HAPI FHIR Server post 5.x
 #idaas.hapiURI=localhost:8888/fhir/
 idaas.fhirServerURI=localhost:8888/fhir/
-idaas.processToFHIR=true
-idaas.processBundles=false
+idaas.process.FHIR=true
+idaas.process.FHIRBundles=false
 
